Bug 181297 - messages hidden in collapsed groups (activity-by-date) are not deleted
Summary: messages hidden in collapsed groups (activity-by-date) are not deleted
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 180800 181479 182168 186988 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-19 14:06 UTC by Kai Dombrowe
Modified: 2009-03-18 10:21 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (145.03 KB, image/png)
2009-01-19 14:07 UTC, Kai Dombrowe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Dombrowe 2009-01-19 14:06:17 UTC
Version:           svn (using Devel)
Compiler:          gcc-Version 4.3.0 (Gentoo 4.3.0 p1.2) 
OS:                Linux
Installed from:    Compiled sources

when i click on "Move all Messages to Trash" nothing happens, see screenshot.

Console output:
just@gentoo ~ $ kmail
kmail(14246) KMail::lockOrDie: oldPid= -1
kmail(14246) KMKernel::KMKernel:         
kmail(14246): The kwalletd service has been disabled 
kmail(14246) KMKernel::init: foldersPath (from config): "/home/just/.kdelive/share/apps/kmail/mail"
kmail(14246) KMKernel::identityManager:                                                            
kmail(14246)/kio (KSycoca) KSycocaPrivate::openDatabase: Trying to open ksycoca from  "/var/tmp/kdecache-just/ksycoca4"
kmail(14246) Sonnet::Loader::loadPlugin: Successfully loaded plugin: "kspell_aspell.desktop"                           
kmail(14246) Sonnet::Loader::loadPlugin: Successfully loaded plugin: "kspell_enchant.desktop"                          
kmail(14246) KMFilterMgr::KMFilterMgr: pPopFilter set                                                                  
kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.outbox.index" , "r+") == mIndexStream ==  0x1d6bd50
kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.drafts.index" , "r+") == mIndexStream ==  0x1daaea0
kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.templates.index" , "r+") == mIndexStream ==  0x1d8f0d0
kmail(14246) KMailApplication::newInstance:                                                                                                                            
kmail(14246) KMKernel::openReader:                                                                                                                                     
kmail(14246) Kpgp::Module::checkForPGP: Kpgp: gpg found                                                                                                                
kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.inbox.index" , "r+") == mIndexStream ==  0x1fabb20    
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x1fabb20 )                                                                                        
kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.inbox.index" , "r+") == mIndexStream ==  0x1fb2ee0    
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x1fb2ee0 )                                                                                        
kmail(14246) KMSystemTray::KMSystemTray: Initting systray                                                                                                              
kmail(14246) KMSystemTray::setMode: Setting systray mMode to 0                                                                                                         
kmail(14246) KMail::MessageListView::Core::View::resizeEvent: Resize event enter (viewport width is  234 )                                                             
kmail(14246) KMail::MessageListView::Core::View::resizeEvent: Resize event enter (viewport width is  1200 )                                                            
just@gentoo ~ $ kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.inbox.index" , "r+") == mIndexStream ==  0x2069530
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x2069530 )
kmail(14246) KMFolderIndex::openInternal: KDE_fopen(indexLocation()= "/home/just/.kdelive/share/apps/kmail/mail/.inbox.index" , "r+") == mIndexStream ==  0x20b6b70
kmail(14246) KMail::MessageListView::Core::View::resizeEvent: Resize event enter (viewport width is  1200 )
kmail(14246) KMail::MessageListView::Core::Model::viewItemJobStepInternal: FILLED THE VIEW AT  74333.3  MSG/SEC
kmail(14246) KMail::MessageListView::Core::Model::viewItemJobStepInternal: Emitting layoutChanged()
kmail(14246) KMail::MessageListView::Core::Model::viewItemJobStepInternal: Emitted layoutChanged()
kmail(14246) KMail::MessageListView::Core::Model::viewItemJobStepInternal: EXPANDING THE TREE TOOK  0  MSECS
kmail(14246) KMail::Vacation::Vacation: Vacation: found url " "" "

*********** cliked on "Move all Messages to Trash" *********

kmail(14246) KNotification::slotReceivedId: 0
kmail(14246) KNotification::close: 0
kmail(14246) KNotification::~KNotification: -2
kmail(14246) KMSystemTray::prettyName: Got label "inbox"
kmail(14246) KMSystemTray::slotContextMenuAboutToShow: Folders added
kmail(14246) KMSystemTray::slotActivated: trigger: 1
kmail(14246) KMMainWin::~KMMainWin: Closing last KMMainWin: stopping mail check
kmail(14246) KMail::PopAccount::slotAbortRequested:
kmail(14246) KMail::PopAccount::slotAbortRequested:
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x20b6b70 )
kmail(14246)/kparts KParts::Part::slotWidgetDestroyed: KPart::slotWidgetDestroyed(), deleting part  "mViewer"
kmail(14246)/khtml (part) KHTMLPart::~KHTMLPart: KHTMLPart(0x1e51e90, name = "mViewer")
kmail(14246) KMail::Vacation::~Vacation: ~Vacation()
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x1daaea0 )
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x1d6bd50 )
kmail(14246) KMFolderMaildir::reallyDoClose: fclose(mIndexStream =  0x1d8f0d0 )
kmail(14246)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
kmail(14246) KMKernel::~KMKernel:
kmail(14246) Sonnet::Loader::~Loader: Removing loader :  Sonnet::Loader(0x1d53e70)
Comment 1 Kai Dombrowe 2009-01-19 14:07:05 UTC
Created attachment 30417 [details]
screenshot
Comment 2 Jaime Torres 2009-01-22 08:52:45 UTC
It happens also in svn trunk r906095.

It only happens with the new message list. Looks like it moves only the new messages and leaves the others. Also notice that in the status bar says "folder successfully compacted".
Comment 3 Jaime Torres 2009-01-27 15:59:05 UTC
*** Bug 180800 has been marked as a duplicate of this bug. ***
Comment 4 Jaime Torres 2009-01-31 20:14:30 UTC
*** Bug 181479 has been marked as a duplicate of this bug. ***
Comment 5 Jaime Torres 2009-02-03 22:09:32 UTC
*** Bug 182168 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Marten 2009-02-11 16:37:50 UTC
Better explanation copied from bug 181479:

I use the new view for messages.
I have "Activity, per date, per thread"
So I have Date entries in the list with I can expand to email threads.
When I use "Move messages to trash " on a folder, the contents of not expanded
date entries are not moved. Only the ones that I have expanded in the view.

The problem could be more generic. All the actions maybe have effect only on
expanded date tags...

Confirmed in current trunk, r924307.
Changing bug title to better describe the problem.
Comment 7 Jaime Torres 2009-03-12 20:40:34 UTC
*** Bug 186988 has been marked as a duplicate of this bug. ***
Comment 8 Szymon Stefanek 2009-03-13 05:23:22 UTC
SVN commit 938817 by stefanek:

The "select all" action now expands all the groups.
This is needed because group items are not selectable
and collapsed groups wouldn't be included in the selection.

This *should* automagically fix all the actions that
operate on all the messages in a folder.

BUG: 181297



 M  +1 -0      pane.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938817
Comment 9 Thomas McGuire 2009-03-18 10:21:08 UTC
SVN commit 940766 by tmcguire:

Backport r938817 by stefanek from trunk to the 4.2 branch:

The "select all" action now expands all the groups.
This is needed because group items are not selectable
and collapsed groups wouldn't be included in the selection.

This *should* automagically fix all the actions that
operate on all the messages in a folder.

CCBUG: 181297




 M  +1 -0      pane.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=940766