The "select all" action now expands all the groups. This is needed because group items are not selectable and collapsed groups wouldn't be included in the selection.

This *should* automagically fix all the actions that
operate on all the messages in a folder.

BUG: 181297


svn path=/trunk/KDE/kdepim/; revision=938817